name:               threepenny-gui
version:            0.10.0.0
synopsis:           GUI framework that uses the web browser as a display.
description:
  Threepenny-GUI is a GUI framework that uses the web browser as a display.
  .
  It's very easy to install because everyone has a web browser installed.
  .
  A program written with Threepenny is essentially a small web server that
  displays the user interface as a web page to any browser that connects to it.
  You can freely manipulate the HTML DOM and handle JavaScript events
  from your Haskell code.
  .
  Stability forecast: This is an experimental release! Send me your feedback!
  Significant API changes are likely in future versions.
  .
  NOTE: This library contains examples, but they are not built by default.
  To build and install the example, use the @buildExamples@ flag like this
  .
  @cabal install threepenny-gui -fbuildExamples@

license:            BSD3
license-file:       LICENSE
author:             Heinrich Apfelmus
maintainer:         Heinrich Apfelmus <apfelmus at quantentunnel dot de>
homepage:           https://heinrichapfelmus.github.io/threepenny-gui/
bug-reports:        https://github.com/HeinrichApfelmus/threepenny-gui/issues
category:           Web, GUI
build-type:         Simple
cabal-version:      >=1.10
tested-with:
  GHC ==8.4.4
   || ==8.6.5
   || ==8.8.4
   || ==8.10.7
   || ==9.0.2
   || ==9.2.8
   || ==9.4.8
   || ==9.6.7
   || ==9.8.4
   || ==9.10.2
   || ==9.12.2

extra-source-files:
  CHANGELOG.md
  samples/README.md

data-dir:
data-files:
  samples/static/*.html
  samples/static/*.png
  samples/static/*.wav
  samples/static/css/*.css
  samples/static/css/*.png

flag buildExamples
  description: Build example executables.
  default:     False
  manual:      True

source-repository head
  type:     git
  location: https://github.com/HeinrichApfelmus/threepenny-gui.git

library
  default-language: Haskell2010
  other-extensions: CPP
  hs-source-dirs:   src
  exposed-modules:
    Graphics.UI.Threepenny
    Graphics.UI.Threepenny.Attributes
    Graphics.UI.Threepenny.Canvas
    Graphics.UI.Threepenny.Core
    Graphics.UI.Threepenny.DragNDrop
    Graphics.UI.Threepenny.Elements
    Graphics.UI.Threepenny.Events
    Graphics.UI.Threepenny.JQuery
    Graphics.UI.Threepenny.SVG
    Graphics.UI.Threepenny.SVG.Attributes
    Graphics.UI.Threepenny.SVG.Elements
    Graphics.UI.Threepenny.Widgets
    Reactive.Threepenny
  other-modules:
    Graphics.UI.Threepenny.Internal
    Paths_threepenny_gui
    Reactive.Threepenny.Memo
    Reactive.Threepenny.Monads
    Reactive.Threepenny.PulseLatch
    Reactive.Threepenny.Types
  cpp-options:      -DCABAL

  build-depends:
        base                       >=4.11  && <4.22
      , containers                 >=0.4.2 && <0.9
      , javascript-ffi-threepenny  >=0.1   && <0.2
      , transformers               >=0.3.0 && <0.7
      , vault                      >=0.3.2 && <0.4

  if impl(ghc)
    exposed-modules:
      Graphics.UI.Threepenny.Server
      Graphics.UI.Threepenny.Timer
    build-depends:
        stm                        >=2.2   && <2.6
      , text                       >=0.11  && <2.2
    ghc-options:      -Wcompat -Wnoncanonical-monad-instances

executable threepenny-examples-bartab
  if flag(buildExamples)
    cpp-options:   -DCABAL
    build-depends:
        base            >=4 && <5
      , threepenny-gui

  else
    buildable: False

  main-is:          BarTab.hs
  hs-source-dirs:   samples
  default-language: Haskell2010

executable threepenny-examples-buttons
  if flag(buildExamples)
    cpp-options:   -DCABAL
    build-depends:
        base            >=4 && <5
      , filepath
      , threepenny-gui

  else
    buildable: False

  main-is:          Buttons.hs
  other-modules:
    Paths
    Paths_threepenny_gui

  hs-source-dirs:   samples
  default-language: Haskell2010

executable threepenny-examples-canvas
  if flag(buildExamples)
    cpp-options:   -DCABAL
    build-depends:
        base            >=4 && <5
      , filepath
      , threepenny-gui

  else
    buildable: False

  main-is:          Canvas.hs
  other-modules:
    Paths
    Paths_threepenny_gui

  hs-source-dirs:   samples
  default-language: Haskell2010

executable threepenny-examples-chat
  if flag(buildExamples)
    cpp-options:   -DCABAL
    build-depends:
        base            >=4 && <5
      , filepath
      , threepenny-gui
      , time

  else
    buildable: False

  main-is:          Chat.hs
  other-modules:
    Data.List.Extra
    Paths
    Paths_threepenny_gui

  hs-source-dirs:   samples
  default-language: Haskell2010

executable threepenny-examples-crud
  if flag(buildExamples)
    cpp-options:   -DCABAL
    build-depends:
        base            >=4 && <5
      , containers
      , threepenny-gui

  else
    buildable: False

  main-is:          CRUD.hs
  hs-source-dirs:   samples
  default-language: Haskell2010

executable threepenny-examples-currencyconverter
  if flag(buildExamples)
    cpp-options:   -DCABAL
    build-depends:
        base            >=4.11 && <5
      , threepenny-gui

  else
    buildable: False

  main-is:          CurrencyConverter.hs
  hs-source-dirs:   samples
  default-language: Haskell2010

executable threepenny-examples-dragndropexample
  if flag(buildExamples)
    cpp-options:   -DCABAL
    build-depends:
        base            >=4 && <5
      , filepath
      , threepenny-gui

  else
    buildable: False

  main-is:          DragNDropExample.hs
  other-modules:
    Paths
    Paths_threepenny_gui

  hs-source-dirs:   samples
  default-language: Haskell2010

executable threepenny-examples-drummachine
  if flag(buildExamples)
    cpp-options:   -DCABAL
    build-depends:
        base            >=4 && <5
      , filepath
      , threepenny-gui

  else
    buildable: False

  main-is:          DrumMachine.hs
  other-modules:
    Paths
    Paths_threepenny_gui

  hs-source-dirs:   samples
  default-language: Haskell2010

executable threepenny-examples-svg
  if flag(buildExamples)
    cpp-options:   -DCABAL
    build-depends:
        base            >=4 && <5
      , threepenny-gui

  else
    buildable: False

  main-is:          Svg.hs
  hs-source-dirs:   samples
  default-language: Haskell2010
